--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -49,6 +49,8 @@ body {
     max-width: 1480px;
     overflow-x: hidden;
     flex-direction: column;
+    margin-bottom: 40px;
+    padding-bottom: var(--footer-h);
 }
 
 .page {
@@ -63,7 +65,7 @@ body {
     left: 0;
     bottom: 0;
     width: 240px;
-    height: 100%;
+    height: 200%;
     background-color: #f0e6f0;
     padding: 12px;
     box-sizing: border-box;
@@ -94,8 +96,22 @@ body {
     background-color: hsl(314, 89%, 82%);
     padding: 10px 0;
     text-align: center;
-    position: bottom: 0;
+    position: fixed;
     bottom: 0;
     width: 100vw;
     box-sizing: border-box;
+    margin-top: auto;
+    line-height: var(--footer-h); 
+}
+.image {
+    width: auto;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.booth-image {
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 6px 16px rgba(0,0,0,0.2);
+    border-radius: 10px;
 }
