--- a/CSS/Booth4 Page.css
+++ b/CSS/Booth4 Page.css
@@ -57,6 +57,17 @@ header p {
   line-height: 1.4;
 }
 
+.booth .photo{
+    width: 100%;
+}
+
+.booth img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
 footer {
   text-align: center;
   padding: 15px;
