--- a/CSS/Booth3 Page.css
+++ b/CSS/Booth3 Page.css
@@ -24,11 +24,12 @@ body.bgBooth3{
    z-index: 1000;
 }
 
-.logo{
+.logo {
     width: 150px;  
     height: 150px; 
     object-fit: cover; 
-    border-radius: 50%;
+    margin-bottom: 0px;
+    border-radius: 5px; 
 }
 
 .name_menu{
@@ -52,4 +53,52 @@ body.bgBooth3{
 .content{
     text-align: center;   
     margin-top: 35px;
+}
+
+.content img{
+    border-radius: 8px; 
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1); 
+
+}
+
+/* บล็อกสินค้า */
+.frame{
+    display: flex; 
+    gap: 30px; 
+    margin: auto;
+    flex-wrap: wrap;
+}
+.blush{
+    margin-top: 30px;
+    max-width: 50%; 
+    height: auto;
+    border-radius: 5px; 
+    background-color: #82cfe9;
+    border: 1px solid hsla(0, 0%, 100%, 0.233);
+    border-radius: 8px; 
+    padding:10px;
+    margin: 30px 30px 30px 30px;
+    max-width: 200px; 
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.1); 
+    
+}
+
+.blush img{
+    max-width: 100%; 
+    height: auto;
+    border-radius: 5px;
+}
+
+.textblush{
+    font-family: "DynaPuff", system-ui;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+    font-variation-settings:"wdth" 100;
+    text-align: center;   
+    color: #11507a;
+    font-size: 18px;
 }
