--- a/CSS/Booth1 Page.css
+++ b/CSS/Booth1 Page.css
@@ -334,3 +334,12 @@ body.bgBooth1 {
   }
 }
 
+.footer {
+    background-color: #f277d3;
+    text-align: center;
+    color: white;       /* สีตัวอักษรขาว */
+    font-family: "Prompt", sans-serif;
+    padding: 20px 0;
+    line-height: 1.5;
+    width: 100%;        /* เต็มความกว้าง */
+}
