--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -1,4 +1,15 @@
-html, body { height: 100%; margin: 0; }
+@font-face {
+    font-family: 'Sukhumvit Set';
+    src: url('../fonts/SukhumvitSet-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+html, body { 
+    height: 100%; 
+    margin: 0; 
+}
 
 @media (max-width: 600px) {
   .Heading {
@@ -21,7 +32,11 @@ html, body { height: 100%; margin: 0; }
   }
 }
 
-:root { --header-h: 80px; }
+:root { 
+  --content-max: 960px;
+  --header-h: 80px; 
+  --footer-h: 60px;
+}
 
 .Heading {
     background-color: hsl(314, 89%, 82%);
@@ -29,12 +44,13 @@ html, body { height: 100%; margin: 0; }
     height: var(--header-h);
     display: flex; 
     align-items: center; 
-    justify-content: left;
+    justify-content: center;
+    width: 100%; 
+    z-index: 100;
 }
 
 .heading-logo {    
     height: 60px;
-    margin-left: 70px;
     margin-right: 10px;
 }
 
@@ -46,13 +62,12 @@ html, body { height: 100%; margin: 0; }
 }
 
 body {
+    font-family: 'Sukhumvit Set', sans-serif;
     display: flex;
     padding: 0px;
-    margin: 0;
     background-size: cover;
-    min-height: 250vh;
+    min-height: 300vh;
     width: 100%;
-    max-width: 1000px;
     overflow-x: hidden;
     flex-direction: column;
     margin-bottom: 40px;
@@ -65,10 +80,14 @@ body {
     text-align: center;
     position: relative;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     box-sizing: border-box;
     margin-top: auto;
-    line-height: var(--footer-h);
+}
+
+.footer p {
+    line-height: normal;
+    margin: 0;
 }
 
 .image {
@@ -107,6 +126,7 @@ body {
   border:0; 
   cursor:pointer;
   padding: 10px;
+  z-index: 101;
 }
 
 .page { 
@@ -127,10 +147,6 @@ body {
   transform: translateX(-100%);
   transition: transform .25s ease;
   z-index: 1000;
-}
-
-.side-list, .side-list { 
-  transform: translateX(0);
 }
 
 .side-list > li { 
@@ -159,14 +175,22 @@ body {
 .main-content { 
   flex: 1;
   display: flex;
-  padding: 10px;
-  padding-left: 50px;
+  padding: 16px 24px 32px; 
   padding-top: var(--header-h);
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
 .main-content-container {
-  max-width: 900px;
-  margin: 10px;
+  max-width: var(--content-max);
+  width: 100%;
+  margin: 0 auto;
+}
+
+.Members b{
+  color: crimson;
 }
 
 body.sidebar-collapsed .left-side { 
