--- a/CSS/Booth3 Page.css
+++ b/CSS/Booth3 Page.css
@@ -1,7 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;          
+  height: 100%; 
 }
 
 /* bg content */
@@ -21,7 +21,8 @@ body.bgBooth3{
    flex-wrap: wrap;
    position: sticky;
    top: 0;
-   z-index: 1000;
+   z-index: 10;
+   position: relative;
 }
 
 .logo {
@@ -101,4 +102,131 @@ body.bgBooth3{
     text-align: center;   
     color: #11507a;
     font-size: 18px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* Hamburger */
+
+
+.hamburger-icon {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  position: relative; 
+  z-index: 10; 
+}
+
+.hamburger-icon span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #121111f9;
+  margin: 5px 0;
+  transition: all 0.3s ease-in-out;
+}
+
+
+.navigation-menu {
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 250px;
+  background-color: #ffffff;
+  left: -250px; 
+  transition: left 0.3s ease-in-out, 
+              box-shadow 0.3s ease-in-out; 
+  z-index: 5; 
+  padding-top: 80px; 
+  
+}
+
+.navigation-menu ul {
+  list-style: none;
+  padding: 0;
+}
+
+.navigation-menu li {
+  margin-bottom: 20px;
+}
+
+.navigation-menu a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 24px;
+}
+
+
+.navigation-menu.is-active {
+  left: 0;
+}
+
+
+.hamburger-icon.is-active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger-icon.is-active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.is-active span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Hamburger end */
+
+
+
+.side-list > li { 
+  margin:8px 0; 
+}
+
+.side-list a {
+  display:flex; 
+  align-items:center; 
+  gap:12px;
+  padding:6px 8px; 
+  border-radius:8px; 
+  text-decoration:none; 
+  color:inherit;
+}
+
+
+.side-list a:hover { 
+  background:#e6d9e6; 
+}
+
+.icon{ 
+  width:20px; 
+  text-align:center; 
+}
+
+
+.side-logo {
+    margin-top: -13px;
+    height: 60px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.label{
+    font-family: 'Sukhumvit Set', sans-serif;
+    display: flex;
+    padding: 0px;
+    background-size: cover;
+    min-height: calc(100vh - var(--footer-h));    
+    overflow-x: hidden;
+    flex-direction: column;
+    padding-bottom:0px;
+
 }
