--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -54,6 +54,14 @@ html, body {
     margin-right: 10px;
 }
 
+.register-button {
+    text-decoration: none;
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+}
+
 .side-logo {
     margin-top: -13px;
     height: 60px;
