--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -23,12 +23,26 @@ html, body {
     font-size: 28px;
     text-align: left;
   }
+  .booth-image-content {
+    display: flex;
+    grid-template-columns: 1fr;
+    gap: 12px;
+  }
+  .booth-image-content img {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    border-radius: 8px;
+  }
 }
 
 @media (min-width: 1025px) {
   .Heading {
     font-size: 34px;
     text-align: left;
+  }
+  .booth-image-content img {
+    width: 100%;
   }
 }
 
@@ -40,6 +54,7 @@ html, body {
 
 .Heading {
     background-color: hsl(314, 89%, 82%);
+    background: linear-gradient(to right, hsl(314, 89%, 82%), hwb(194 55% 8%));
     position: fixed; top: 0; left: 0; right: 0;
     height: var(--header-h);
     display: flex; 
@@ -54,14 +69,6 @@ html, body {
     margin-right: 10px;
 }
 
-.register-button {
-    text-decoration: none;
-    text-align: right;
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-}
-
 .side-logo {
     margin-top: -13px;
     height: 60px;
@@ -70,24 +77,29 @@ html, body {
 }
 
 body {
+    background-color: #e6d9e6;
+    background: linear-gradient(to right, hsl(189, 100%, 90%), #e6d9e6);
     font-family: 'Sukhumvit Set', sans-serif;
     display: flex;
     padding: 0px;
     background-size: cover;
-    min-height: 300vh;
     width: 100%;
     overflow-x: hidden;
     flex-direction: column;
-    margin-bottom: 40px;
     padding-bottom: var(--footer-h);
+    padding-top: 20px;
 }
 
-.main-content h2 {
-    text-decoration: underline;
+.main-content-container {
+   padding: 15px;
+   background-color: white;
+   box-shadow: 0 5px 15px rgba(0,0,0,.35);
+   border-radius: 10px;
 }
 
 .footer {
     background-color: hsl(314, 89%, 82%);
+    background: linear-gradient(to right, hsl(314, 89%, 82%), hwb(194 55% 8%));
     padding: 10px 0;
     text-align: center;
     position: relative;
@@ -120,7 +132,7 @@ body {
     width: 30%;
     height: auto;
     border-radius: 8px;
-    margin: 10px;
+    margin: 5px;
     aspect-ratio: 4 / 3;
 }
 
