--- a/CSS/Booth Directory Page.css
+++ b/CSS/Booth Directory Page.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Mogra&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mogra&display=swap");
 .bg-quarters {
   position: fixed;
   inset: 0; /* top:0; right:0; bottom:0; left:0 */
@@ -34,10 +33,9 @@ body {
 
 .menu {
   position: relative;
-  z-index: 1; 
+  z-index: 1;
   padding: 20px;
 }
-
 
 .content-grid {
   position: fixed;
@@ -45,24 +43,47 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  z-index: 1; 
-  pointer-events: none; 
+  z-index: 1;
+  pointer-events: none;
 }
 .content-grid .cell {
   display: flex;
   align-items: center;
   justify-content: center;
-  pointer-events: auto; 
+  pointer-events: auto;
 }
 .content-grid .cell a {
   text-decoration: none;
   color: #111;
   font-weight: 700;
   font-size: 1.4rem;
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.8);
   padding: 10px 14px;
   border-radius: 8px;
+  position: relative;
+  z-index: 2;
 }
+
+.booth-logo {
+  height: 90px;
+  width: auto;
+  position: absolute;
+  z-index: 1;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  opacity: 0.6;  /* ค่าเริ่มต้นสำหรับโลโก้ทั่วไป */
+}
+
+
+.cell.c1 .booth-logo {
+  opacity: 0.6;  
+}
+.cell.c3 .booth-logo {
+  opacity: 0.6; 
+  height: 140px; 
+}
+
 
 .center-home {
   position: fixed;
