--- a/CSS/Booth4 Page.css
+++ b/CSS/Booth4 Page.css
@@ -30,14 +30,12 @@ html, body {
   --footer-h: 60px;
 }
 
-body {
+.body {
     display: flex;
     padding: 0px;
     margin: 0;
     background-size: cover;
-    min-height: 250vh;
     width: 100%;
-    max-width: 1000px;
     overflow-x: hidden;
     flex-direction: column;
     margin-bottom: 40px;
