--- a/CSS/Booth4 Page.css
+++ b/CSS/Booth4 Page.css
@@ -24,6 +24,8 @@ html, body {
   }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 :root { 
   --content-max: 960px;
   --header-h: 80px; 
@@ -40,10 +42,12 @@ html, body {
     flex-direction: column;
     margin-bottom: 40px;
     padding-bottom: var(--footer-h);
-    background: linear-gradient(135deg, #f0fcc1, #f1cfe6);
     color: #090909;
     margin: 0;
     padding: 0;
+}
+body{
+  background: linear-gradient(#fed2ca,#e8ead6);
 }
 
 .toggle-btn {
@@ -76,6 +80,9 @@ html, body {
   transform: translateX(-100%);
   transition: transform .25s ease;
   z-index: 1000;
+  font-family: "Itim", cursive;
+  font-size: 20px;
+  font-weight: 60px;
 }
 
 .left-side.active{
@@ -141,6 +148,7 @@ body.sidebar-collapsed .left-side ul ul {
 header {
   text-align: center;
   background: linear-gradient(#e7d8ec,#c5d4e0);
+  font-family: "Itim", cursive;
   color: rgb(168, 135, 202);
   padding: 33px 33px;
   box-shadow: 0 8px 20px rgba(28, 34, 3, 0.2);
@@ -165,7 +173,7 @@ header p {
 }
 
 .booth {
-  background: white;
+  background: rgb(245, 243, 227);
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   width: 280px;
@@ -180,6 +188,7 @@ header p {
 
 .booth h2 {
   color: rgb(168, 135, 202);
+  font-family: "Itim", cursive;
   margin-bottom: 10px;
   font-size: 1.5em;
 }
@@ -187,6 +196,7 @@ header p {
 .booth p {
   font-size: 1em;
   line-height: 1.4;
+  font-family: "Itim", cursive;
 }
 
 .booth .photo{
