--- a/CSS/Booth3 Page.css
+++ b/CSS/Booth3 Page.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Mali:wght@400;600&display=swap');
+
+
 html, body {
   margin: 0;
   padding: 0;
@@ -8,14 +11,14 @@ html, body {
 /* bg content */
 
 body.bgBooth3{
-    background-color: #C9E2F3;
+    background-color: #e9c5eb;
 }
 
 
 /* logo */
 
 .bglogo{
-   background-color: #73bee0;
+   background-color: #eca8ee;
    padding: 5px 5px ;             
    display: flex;
    align-items: center;           
@@ -119,7 +122,7 @@ body.bgBooth3{
   cursor: pointer;
   padding: 10px;
   position: relative; 
-  z-index: 10; 
+  z-index: 1000; 
 }
 
 .hamburger-icon span {
@@ -129,6 +132,7 @@ body.bgBooth3{
   background-color: #0a4355f9;
   margin: 5px 0;
   transition: all 0.3s ease-in-out;
+  border-radius: 50px;
 }
 
 
@@ -140,7 +144,7 @@ body.bgBooth3{
   left: -250px; 
   transition: left 0.3s ease-in-out, 
               box-shadow 0.3s ease-in-out; 
-  z-index: 5; 
+  z-index: 2000; 
   padding-top: 80px; 
   
 }
@@ -159,9 +163,12 @@ body.bgBooth3{
 }
 
 .navigation-menu a {
-  text-decoration: none;
-  color: #000000;
-  font-size: 24px;
+   text-decoration: none;
+   color: #000000;
+   font-size: 24px;
+   font-family: 'Mali', cursive !important; 
+   margin: 10px 0px 10px 10px;
+   display: block;
 }
 
 
@@ -347,6 +354,7 @@ h2 {
     cursor: pointer;
     padding: 0;
     transition: background-color 0.3s ease;
+    
 }
 
 /* สไตล์ของ .dot เมื่อถูก 'active' */
